--- a/movie_database/index.html
+++ b/movie_database/index.html
@@ -8,7 +8,28 @@
     <script src="js/movie-database.js"></script>
   </head>
   <body ng-app="movie-database" ng-controller="MainController">
-    <button ng-click="nowPlaying()">Now Playing</button>
+    <button ng-click="nowPlaying()">Movies Playing Now</button>
+    <!-- {{ api_results.results[0].original_title }} -->
+    <br>
+    <div>
+      <ul>
+        <li ng-repeat=" result in results " >Movie id: {{ result.id }}, Movie title: {{ result.title }}</li>
+      </ul>
+    </div>
+    <div>
+      <input ng-model="movieID" type="text">
+      <button ng-click="movieDetails(movieID)">Get movie details now</button>
+      <br>
+      <ul ng-show="movie_details">
+        <li><b>Movie title:</b> {{ movie_details.title }}</li>
+        <li><b>Movie overview:</b> {{ movie_details.overview }}</li>
+        <li><b>Release date:</b> {{movie_details.release_date }} </li>
+        <li><b>Website:</b> {{ movie_details.homepage }} </li>
+      </ul>
+      <p>
+
+      </p>
+      <label>{{ movie_details }}</label>
+    </div>
   </body>
-  <ui-router></ui-router>
 </html>
