--- a/movie_database/index.html
+++ b/movie_database/index.html
@@ -15,6 +15,7 @@
         <li ng-repeat=" result in results " >Movie id: {{ result.id }}, Movie title: {{ result.title }}</li>
       </ul>
     </div>
+
     <div>
       <input ng-model="movieID" type="text">
       <button ng-click="movieDetails(movieID)">Get movie details now</button>
@@ -24,6 +25,16 @@
         <li><b>Movie overview:</b> {{ movie_details.overview }}</li>
         <li><b>Release date:</b> {{movie_details.release_date }} </li>
         <li><b>Website:</b> {{ movie_details.homepage }} </li>
+      </ul>
+    </div>
+
+    <br>
+    <div>
+      <input ng-model="queryText" type="text">
+      <button ng-click="movieSearch(queryText)">Find me the movies</button>
+      <ul ng-repeat=" movie in movies ">
+        <li><b>Movie title:</b> {{ movie.title }}</li>
+        <li><b>Movie overview:</b> {{ movie.overview }}</li>
       </ul>
     </div>
   </body>
